tests/baselines/reference/augmentedTypesModules2.errors.txt
==== tests/cases/compiler/augmentedTypesModules2.ts (3 errors) ====
    // module then function
    module m2 { }
    function m2() { }; // ok since the module is not instantiated
    
    module m2a { var y = 2; }
    function m2a() { }; // error since the module is instantiated
             ~~~
!!! augmentedTypesModules2.ts(6,10): error TS2000: Duplicate identifier 'm2a'. Additional locations:
!!! 	augmentedTypesModules2.ts(5,8)
    
    module m2b { export var y = 2; }
    function m2b() { };  // error since the module is instantiated
             ~~~
!!! augmentedTypesModules2.ts(9,10): error TS2000: Duplicate identifier 'm2b'. Additional locations:
!!! 	augmentedTypesModules2.ts(8,8)
    
    function m2c() { }; 
    module m2c { export var y = 2; } 
    
    module m2cc { export var y = 2; }
    function m2cc() { }; // error to have module first
             ~~~~
!!! augmentedTypesModules2.ts(15,10): error TS2000: Duplicate identifier 'm2cc'. Additional locations:
!!! 	augmentedTypesModules2.ts(14,8)
    
    module m2d { }
    declare function m2d(): void; 
    
    declare function m2e(): void; 
    module m2e { }
    
    function m2f() { };
    module m2f { export interface I { foo(): void } } 
    
    function m2g() { };
    module m2g { export class C { foo() { } } } 
    